# HScanner

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.sh
src/hscanner/: budget.py  cache.py  classifier.py  cli.py  errors.py  exporters.py  hash.py  inventory.py  keys.py  models.py  progress.py  report.py  report_view.py  scanner.py  state.py  store.py
src/hscanner/engines/: _http.py  base.py  metadefender.py  registry.py  rotation.py  virustotal.py
src/hscanner/policy/: __init__.py  default_policy.yaml  loader.py
src/hscanner/web/: app.py  jobs.py  persistent_reports.py  report_store.py  routes.py
src/hscanner/web/static/: app.css
tests/: test_batch_file_scan_manager.py  test_budget.py  test_cache.py  test_classifier.py  test_classifier_priority_ext.py  test_classifier_signals.py  test_cli_bypass.py  test_cli_engine.py  test_cli_exports.py  test_cli_online.py  test_engine_base.py  test_engine_registry.py  test_engine_rotation.py  test_exporters.py  test_file_scan_manager.py  test_hardlink.py  test_inventory.py  test_inventory_hash.py  test_inventory_hscanner.py  test_jobs.py  test_keyring_storage.py  test_keys.py  test_local_scan_signals.py  test_metadefender_engine.py  test_models.py  test_models_risk_tier.py  test_no_key_persisted.py  test_online_scan.py  test_online_scan_bypass.py  test_package.py  test_persistent_report_store.py  test_policy_loader.py  test_progress.py  test_quota.py  test_quota_policy.py  test_report.py  test_report_compute_summary.py  test_report_registry_update.py  test_report_schema.py  test_report_store.py  (+19 more)
(+8 files in other folders)
