[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hscanner"
version = "0.1.0"
description = "Local folder triage with VirusTotal enrichment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "keyring>=25.0.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
hscanner = "hscanner.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-httpx>=0.30.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
